--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -318,3 +318,14 @@
     note = {R package version 1.2.5},
     url = {http://CRAN.R-project.org/package=muhaz},
   }
+
+  @Article{actuar,
+    title = {actuar: An R Package for Actuarial Science},
+    author = {Christophe Dutang and Vincent Goulet and Mathieu Pigeon},
+    journal = {Journal of Statistical Software},
+    year = {2008},
+    volume = {25},
+    number = {7},
+    pages = {38},
+    url = {http://www.jstatsoft.org/v25/i07},
+  }
