--- a/vignettes/flexsurv.Rnw
+++ b/vignettes/flexsurv.Rnw
@@ -381,8 +381,11 @@ To supply a custom distribution, the \code{dist} argument to
 character string.  The list has the following elements.
 
 \begin{description}
-\item[\code{name}] Name of the distribution.  For example, if this is \code{"llogis"} then there are assumed to be at least either a function called \code{d} to compute the probability density or \code{h} to compute the hazard.  Ideally there will also be a function called \code{p} for the cumulative distribution (if \code{d} is given}, or \code{H} for the cumulative hazard (to complement \code{h}).
-  These functions must be \emph{vectorised}.   SEE EXAMPLE BELOW
+\item[\code{name}] Name of the distribution.  For example, if this is \code{"llogis"} then there are assumed to be at least either a function called \code{d} to compute the probability density or \code{h} to compute the hazard.  Ideally there will also be a function called \code{p} for the cumulative distribution (if \code{d} is given), or \code{H} for the cumulative hazard (to complement \code{h}).   
+  These functions must be \emph{vectorised}, and the density function
+  must also accept an argument \code{log}, which when \code{TRUE},
+  returns the log density.   See the examples below. 
+  
 \item[\code{pars}] Character vector naming the parameters of the distribution $\mu,\alpha_1,...,\alpha_R$.
 \item[\code{location}] Quoted name of the location parameter $\mu$.
 \item[\code{transforms}] A list of functions $g()$ which transform the parameter from its natural range to the real line, for example, \code{c(log,identity)} \footnote{Note this is a \emph{list}, not an \emph{atomic vector} of functions, so if the distribution only has one parameter, we shoudl write \code{transforms=c(log)} or \code{transforms=list(log)}, not \code{transforms=log}}
@@ -394,11 +397,8 @@ character string.  The list has the following elements.
 
 The following custom model uses the log-logistic distribution function
 (\code{dllogis} and \code{pllogis}) available in the package
-\pkg{eha}.   This has two parameters DISCUSS.   INITIAL VALUES?
-
-%% survivor function 1/ (1 + (x/b)^a)
-%% log(1/S(t) - 1) is linear function of log time.  proportional odds
-
+\pkg{eha}.   The survivor function is $S(t|\mu,alpha) = 1/(1 + (t/\mu)^\alpha)$,
+so that the odds $(1-S(t))/S(t)$ are a linear function of log time.
 <<>>=
 library(eha)
 custom.llogis <- list(name="llogis",  pars=c("shape","scale"), location="scale",
@@ -411,17 +411,15 @@ This fits the breast cancer data better than the Weibull, since it can
 represent a peaked hazard, but less well than the generalized gamma.
 Proportional odds.  ANY SPACE FOR A HIGHLIGHTED PLOT
 
-
-The distribution exists in another package, but may be parameterised 
-Example: Gompertz-Makeham -- say it doesn't converge, the parameters aren't identifiable 
-
 \paragraph{Example: Wrapping functions from a contributed package}
 
 Sometimes there may be probability density and similar functions in a
 contributed package, but in a different format.  For example,
 \pkg{eha} also provides a three-parameter Gompertz-Makeham
-distribution with density \code{dmakeham}, whose shape parameters are
-provided to as a vector of length two.  However, \code{flexsurvreg}
+distribution with density \code{dmakeham}, and 
+hazard $h(t|\mu,\alpha_1,\alpha_2)= \alpha_2 + \alpha_1 \exp(t/\mu)$
+whose shape parameters ($(\alpha_1,\alpha_2)$) are
+provided as a vector of length two.  However, \code{flexsurvreg}
 expects its distribution functions to have one argument for each
 parameter.  Therefore we write our own functions that wrap around 
 the third-party functions.
@@ -434,28 +432,29 @@ pmakeham3 <- function(q, shape1, shape2, scale, ...)  {
 }
 @ 
 \code{flexsurvreg} also requires these functions to be
-\emph{vectorized}.  That is, we can supply a vector of alternative
-values for each argument and expect a vector of the same length to be
-returned.  The R base function \code{Vectorize} can be used 
-to do this here.
+\emph{vectorized}, as the standard distribution functions in R are.
+That is, we can supply a vector of alternative values for one or more
+arguments, and expect a vector of the same length to be returned.  The
+R base function \code{Vectorize} can be used to do this here.
 <<>>=
 dmakeham3 <- Vectorize(dmakeham3) 
 pmakeham3 <- Vectorize(pmakeham3)
 @ 
 and this allows us to write, for example, 
 <<>>=
-pmakeham3(c(0, 1, 1, Inf), c(1, 1, 2, 1), 1, 1)
+pmakeham3(c(0, 1, 1, Inf), 1, c(1, 1, 2, 1), 1)
 @ 
-Our functions 
-\begin{Scode}
-custom.makeham <- list(name="makeham3",
-                       pars=c("shape1","shape2","scale"),
-\end{Scode}
+We could then use \code{dist=list(name="makeham3", pars=c("shape1","shape2","scale"),...)}
+in a \code{flexsurvreg} model\footnote{though the second shape parameter appears to be not 
+  identifiable in the breast cancer example}. 
 
-Functions need to be vectorised 
-density functions need a log argument
 
 \paragraph{Example: Changing the parameterisation of a distribution}
+
+We may want to parameterise the Weibull distribution as $S(t) =
+\exp(-\mu t^\alpha)$, so that the covariate effects reported in the
+printed \code{flexsurvreg} object can be interpreted as hazard ratios
+or log hazard ratios without any further transformation.
 
 (talk about Weibull prop haz model, GG PH)
 refer back to Weibull model presentation
