rnw edits on train

--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -329,3 +329,12 @@
     pages = {38},
     url = {http://www.jstatsoft.org/v25/i07},
   }
+
+@article{demiris2011survival,
+  title={{Survival extrapolation using the poly-Weibull model}},
+  author={Demiris, N. and Lunn, D. and Sharples, L.D.},
+  journal={Statistical Methods in Medical Research},
+  year={2011},
+  publisher={SAGE Publications}
+}
+
